# ymc_queue

./: CMakeLists.txt
include/: orig.hpp
include/ymcqueue/: orig.hpp  queue.hpp
lib/wfqueue/: CMakeLists.txt  primitives.h  wfqueue.c  wfqueue.h
src/: erased_queue.cpp  queue.cpp
src/private/: detail.hpp  erased_queue.hpp  handle.hpp  node.hpp  ordering.hpp  queue_private.hpp
test/: test_multi.cpp  test_single.cpp
